--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,11 @@ img{
 li{
     list-style: none;
 }
+li:hover{
+    background-color: var(--color-light-icons);
+}
+.font-size-msg{
+    font-size: 13px;
+    margin-left:  65px;
+    
+}
