--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 .bg-bar{
     background-color:var(--color-text-grey);
     height: 63px;
+    width: 100%;
 }
 .bg-notification{
     background-color: var(--color-notification);
@@ -55,4 +56,10 @@ li:hover{
     font-size: 13px;
     margin-left:  65px;
     
+}
+.background-img{
+    background-image: url(../img/mine.jpg)
+}
+.h0{
+    height: 90%;
 }
