--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ li:hover{
     
 }
 .background-img{
-    background-image: url(../img/mine.jpg)
+    background-image: url(../img/mine.jpg);
 }
 .h0{
     height: 84%;
@@ -66,6 +66,18 @@ li:hover{
 .font-size-icons{
     font-size: 25px;
 }
-.h01{
+.text-sent{
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin-left: auto;
+    background-color: var(--color-sent-message);
+}
+.text-received{
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin-right: auto;
+    background-color: var(--color-white);
+}
+.h1{
     height: 0;
 }
