ciclo v-for msg

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ li{
 }
 li:hover{
     background-color: var(--color-light-icons);
+    cursor: pointer;
 }
 .font-size-msg{
     font-size: 13px;
@@ -79,4 +80,9 @@ li:hover{
 }
 .h1{
     height: 0;
+}
+.msg{
+    padding: 10px 20px;
+    border-radius: 10px;
+
 }
